--- a/FrontEnd/LelkiBekeFrontEnd/package.json
+++ b/FrontEnd/LelkiBekeFrontEnd/package.json
@@ -10,7 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "nuxt": "^3.15.4",
+    "@nuxtjs/axios": "^5.13.6",
+    "@zxing/browser": "^0.1.5",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "bootstrap-vue": "^2.23.1",
+    "nuxt": "^3.15.3",
     "vue": "latest",
     "vue-router": "latest"
   }
