--- a/FrontEnd/LelkiBekeFrontEnd/package.json
+++ b/FrontEnd/LelkiBekeFrontEnd/package.json
@@ -13,9 +13,11 @@
     "@nuxtjs/axios": "^5.13.6",
     "@pinia/nuxt": "^0.10.1",
     "@zxing/browser": "^0.1.5",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "bootstrap-vue": "^2.23.1",
+    "cors": "^2.8.5",
     "nuxt": "^3.15.3",
     "pinia": "^3.0.1",
     "vue": "latest",
