--- a/FrontEnd/LelkiBekeFrontEnd/package.json
+++ b/FrontEnd/LelkiBekeFrontEnd/package.json
@@ -18,8 +18,10 @@
     "bootstrap-icons": "^1.11.3",
     "bootstrap-vue": "^2.23.1",
     "cors": "^2.8.5",
+    "laravel-echo": "^2.0.2",
     "nuxt": "^3.15.3",
     "pinia": "^3.0.1",
+    "pusher-js": "^8.4.0",
     "vue": "latest",
     "vue-cryptojs": "^2.4.7",
     "vue-router": "latest"
