--- a/FrontEnd/LelkiBekeFrontEnd/package.json
+++ b/FrontEnd/LelkiBekeFrontEnd/package.json
@@ -24,6 +24,7 @@
     "pusher-js": "^8.4.0",
     "vue": "latest",
     "vue-cryptojs": "^2.4.7",
+    "vue-qrcode-reader": "^5.7.1",
     "vue-router": "latest"
   },
   "devDependencies": {
