--- a/Lelkibeke/.gitignore
+++ b/Lelkibeke/.gitignore
@@ -6,11 +6,11 @@
 /storage/*.key
 /storage/pail
 /vendor
-.env
-.env.backup
-.env.production
-.phpactor.json
-.phpunit.result.cache
+# .env
+# .env.backup
+# .env.production
+# .phpactor.json
+# .phpunit.result.cache
 Homestead.json
 Homestead.yaml
 npm-debug.log
