--- a/FrontEnd/LelkiBekeFrontEnd/package.json
+++ b/FrontEnd/LelkiBekeFrontEnd/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/i18n": "^9.2.1",
     "@pinia/nuxt": "^0.10.1",
     "@zxing/browser": "^0.1.5",
     "axios": "^1.7.9",
