--- a/Lelkibeke/.env
+++ b/Lelkibeke/.env
@@ -2,7 +2,18 @@ APP_DEBUG=true  # Turn on debugging for error messages
 APP_ENV=local
 APP_KEY=base64:hHmntd5z0VS13D3tRl4a2+UyGQzAU1z2EI9T+lTMlsE=
 
-MAIL_SERVER_URL=http://localhost:8001 # or your mailproba server URL
+# Mail settings (copied from email server)
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com  # or your email provider's SMTP server
+MAIL_PORT=465  # Note: Changed from 587 to 465 as per the email server config
+MAIL_USERNAME=innerpeace@jedlik.eu
+MAIL_PASSWORD=InnerP2025%
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="innerpeace@jedlik.eu"
+MAIL_FROM_NAME="Inner Peace"
+
+# You can remove this line since you're not using the separate mail server anymore
+# MAIL_SERVER_URL=http://localhost:8001
 
 DB_CONNECTION=mysql
 DB_HOST=bgs.jedlik.eu
