--- a/Lelkibeke/.env
+++ b/Lelkibeke/.env
@@ -34,8 +34,8 @@ BROADCAST_CONNECTION=reverb
 REVERB_APP_ID=698542
 REVERB_APP_KEY=oevgiouibc6ohhmnpuab
 REVERB_APP_SECRET=lyqdtzz2fuaswurfj13f
-REVERB_HOST="localhost"
-REVERB_PORT=8080
+REVERB_HOST="ws.innerpeace.jedlik.cloud"
+REVERB_PORT=80
 REVERB_SCHEME=http
 
 VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
