Add Cypress configuration and initial test setup

--- a/FrontEnd/LelkiBekeFrontEnd/package.json
+++ b/FrontEnd/LelkiBekeFrontEnd/package.json
@@ -30,6 +30,7 @@
     "vue-router": "latest"
   },
   "devDependencies": {
-    "@types/crypto-js": "^4.2.2"
+    "@types/crypto-js": "^4.2.2",
+    "cypress": "^14.1.0"
   }
 }
